--- a/inloop.html
+++ b/inloop.html
@@ -22,10 +22,12 @@
     h1 { font-size: 20px; margin: 10px 0; }
     canvas { background: var(--panel); border: 4px solid var(--fg); border-radius: 12px; }
     #rad { width: 500px; height: 400px; }
+    .knoppen { display: flex; gap: 10px; margin-top: 12px; }
     button {
-      margin-top: 12px; padding: 10px 20px; font-size: 16px;
+      padding: 10px 16px; font-size: 16px;
       border: 0; border-radius: 12px; background: var(--fg); color: #fff; cursor: pointer;
     }
+    button.secondary { background: #555; }
     button[disabled] { opacity: .6; cursor: not-allowed; }
     #resultaat { margin-top: 10px; font-size: 18px; font-weight: 700; min-height: 1.5em; }
     #live { position: absolute; left: -9999px; }
@@ -37,12 +39,18 @@
   <div class="kolom">
     <h1>Spinner</h1>
     <canvas id="rad" width="500" height="400" aria-label="kleurenspin"></canvas>
-    <button id="draaiBtn" aria-describedby="resultaat">Draai</button>
+
+    <div class="knoppen">
+      <button id="draaiBtn" aria-describedby="resultaat">Draai</button>
+      <button id="spreekBtn" class="secondary" title="Spreek de laatst gekozen kleur uit">Spreek kleur</button>
+    </div>
+
     <div id="resultaat"></div>
+
     <div class="rij">
       <label>
-        <input type="checkbox" id="spreekToggle" checked />
-        Kleur uitspreken
+        <input type="checkbox" id="spreekToggle" />
+        Automatisch uitspreken na draaien
       </label>
     </div>
     <div id="live" role="status" aria-live="polite"></div>
@@ -54,7 +62,7 @@
   </div>
 
   <script>
-  // ---------- hulpfunctie voor blendmodus ----------
+  // hulpfunctie voor blendmodus
   function supportMode(ctx, mode) {
     const prev = ctx.globalCompositeOperation;
     ctx.globalCompositeOperation = mode;
@@ -63,15 +71,12 @@
     return ok;
   }
 
-  // ---------- spraak met NL stem en iPad harde fix ----------
+  // spraak met NL stem en iPad fixes
   let nlVoice = null;
 
   const isAppleMobile =
     /iPad|iPhone|iPod/.test(navigator.userAgent)
     || (navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1);
-
-  // Als dit true is, spreekt iPad meteen bij de klik de kleur uit
-  const spreekDirectOpIPad = true;
 
   let audioCtx = null;
   let ttsPrimed = false;
@@ -147,7 +152,7 @@
       unlockAudio();
       const u = new SpeechSynthesisUtterance(' ');
       u.lang = nlVoice?.lang || 'nl-NL';
-      u.volume = 0.01; // fluister
+      u.volume = 0.01;
       u.rate = 1;
       u.pitch = 1;
       speechSynthesis.speak(u);
@@ -175,8 +180,7 @@
   }
 
   function spreekKleur(naam) {
-    const aan = document.getElementById('spreekToggle')?.checked;
-    if (!aan || !('speechSynthesis' in window)) return;
+    if (!naam) return;
     const key = String(naam || '').toLowerCase().trim();
     if (key === 'turquoise') { spreekEenmaal('thurkwáazùh', 0.98); return; }
     spreekEenmaal(naam, 1.0);
@@ -194,7 +198,7 @@
     }, { once: true });
   }
 
-  // ---------- kleuren en labels ----------
+  // kleuren en labels, 80 procent voorkeursset, 20 procent overige set
   const preferredSet = [
     { label: 'Bruin',     hex: '#8B4513' },
     { label: 'Zilver',    hex: '#C0C0C0' },
@@ -219,7 +223,7 @@
   const kleurMap = Object.fromEntries([...preferredSet, ...limitedSet].map(o => [o.label, o.hex]));
   const metallicKleuren = new Set(['Goud', 'Zilver']);
 
-  // goud en zilver liever geen buren
+  // goud en zilver liever geen buren op het rad
   function scheidBuren(arr, a, b) {
     const n = arr.length;
     let ia = arr.indexOf(a), ib = arr.indexOf(b);
@@ -233,17 +237,18 @@
     kopie.splice(insert, 0, item);
     return kopie;
   }
-  opties = scheidBuren(opties, 'Goud', 'Zilver');
+  opties = scheidBuren(optes = opties, 'Goud', 'Zilver');
 
   const donkereSegmenten = new Set([]);   // segmenttekst donker
   const lijnenWitKleuren = new Set([]);   // monsterlijnen zwart
   const pupilKleuren = new Set([]);       // pupillen uit
 
-  // ---------- spinner ----------
+  // spinner
   const rad = document.getElementById('rad');
   const rctx = rad.getContext('2d');
   const CX = 220, CY = 200, R = 190;
   let hoek = 0, bezig = false;
+  let laatsteKleur = ''; // wordt na elke draai gezet, de Spreek knop gebruikt deze waarde
 
   function normBoog(a0, a1) {
     const tau = Math.PI * 2;
@@ -383,7 +388,7 @@
   // pijl buiten het rad, rechts, wijst naar links
   function tekenPijl() {
     const offset = 22;
-       const tipX = CX + R + offset;
+    const tipX = CX + R + offset;
     const tipY = CY;
     const baseX = tipX + 34;
     const halfH = 22;
@@ -407,7 +412,7 @@
     tekenPijl();
   }
 
-  // ---------- monster ----------
+  // monster
   const mCanvas = document.getElementById('monster');
   const m = mCanvas.getContext('2d');
   const imgMask  = new Image();  imgMask.src  = 'monster-mask.png';
@@ -561,7 +566,7 @@
     ctx.quadraticCurveTo(x, y, x + r, y);
   }
 
-  // ---------- gewogen keuze 80,20 en spin ----------
+  // gewogen keuze 80,20
   function pickGewogen() {
     const r = Math.random();
     const pool = r < 0.8 ? preferredSet : limitedSet;
@@ -574,22 +579,16 @@
   function draai() {
     if (bezig) return;
 
-    // iPad, audio en TTS direct unlocken en zo nodig direct spreken
     if (isAppleMobile) {
       unlockAudio();
       primeTTS();
     }
 
-    // kies doelkleur volgens 80,20 verdeling
-    const doelNaam = pickGewogen();
-
-    // iPad spreekt meteen bij start zodat het gegarandeerd hoorbaar is
-    if (isAppleMobile && spreekDirectOpIPad) {
-      spreekKleur(doelNaam);
-    }
-
     bezig = true;
     document.getElementById('draaiBtn').disabled = true;
+
+    // kies doelkleur volgens 80,20 verdeling
+    const doelNaam = pickGewogen();
 
     const doelIndex = opties.indexOf(doelNaam);
     const n = opties.length;
@@ -621,6 +620,8 @@
         renderRad();
 
         const gekozen = doelNaam;
+        laatsteKleur = gekozen;
+
         const lijnenWit = lijnenWitKleuren.has(gekozen);
         const toonPupillen = pupilKleuren.has(gekozen);
         const metallicType = metallicKleuren.has(gekozen) ? gekozen : null;
@@ -628,8 +629,8 @@
         toonResultaat(gekozen);
         kleurMonster(kleurMap[gekozen], lijnenWit, toonPupillen, metallicType);
 
-        // op pc en niet-iOS pas na het landen spreken
-        if (!isAppleMobile || !spreekDirectOpIPad) {
+        // alleen automatisch uitspreken indien aangevinkt
+        if (document.getElementById('spreekToggle').checked) {
           spreekKleur(gekozen);
         }
 
@@ -647,9 +648,15 @@
 
   // init
   document.getElementById('draaiBtn').addEventListener('click', draai);
+  document.getElementById('spreekBtn').addEventListener('click', () => {
+    // dit is een directe gebruikersactie, werkt dus op iPad
+    if (isAppleMobile) { unlockAudio(); primeTTS(); }
+    spreekKleur(laatsteKleur || 'Geen kleur gekozen');
+  });
   document.addEventListener('keydown', e => {
     if ((e.key === 'Enter' || e.code === 'Space') && !bezig) draai();
   });
+
   renderRad();
   </script>
 </body>
