--- a/inloop.html
+++ b/inloop.html
@@ -209,7 +209,7 @@ function spreekEenmaal(text, rate = SPEECH_RATE) {
 function uitspraakTurquoise() {
   // op iPad werkt spatie+komma om syllabes te forceren
   return isAppleMobile
-    ? "thurkwáazù"    // klinkt als thur-kwáá-zuh in NL
+    ? "thurkwáaze"    // klinkt als thur-kwáá-zuh in NL
     : "thurkwáazùh";       // desktop stem pakt accenten prima
 }
 
@@ -542,5 +542,6 @@ kleurMonster('#FFFFFF', false, false, null);
 </script>
 </body>
 </html>
+
 
 
